--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # flutter_html: ^3.0.0
+  flutter_html: ^3.0.0-alpha.6
+  webview_flutter: ^4.4.2
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - assets/me.jpg
+     - assets/portfolio.jpg
+     - assets/photo1.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
