--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,9 +63,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/me.jpg
-     - assets/portfolio.jpg
-     - assets/photo1.jpeg
+     - assets/
+     #- assets/portfolio.jpg
+     #- assets/photo1.jpeg
+     #- assets/flowers.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,10 +80,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Bulbasaur
+       fonts:
+         - asset: fonts/ofont.ru_Bulbasaur SP.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
